# crow-demo

./: .gitconfig  CMakeLists.txt  README.md  main.cpp
.githooks/: commit-msg
git-template/hooks/: commit-msg
include/: Routes.h  routes.h
include/controllers/: HelloController.h  hello_controller.h
include/models/: User.h  user.h
include/services/: HelloService.h  hello_service.h
jenkinsfile/: galaxy.groovy
src/: Routes.cpp  routes.cpp
src/controllers/: HelloController.cpp  hello_controller.cpp
src/models/: User.cpp  user.cpp
src/services/: HelloService.cpp  hello_service.cpp
tests/: TestRoutes.cpp  test_routes.cpp
